=== WebCore-85.6.1 ===

2004-07-09  Vicki Murley  <vicki@apple.com>

	- merge this fix from HEAD, so that the July 2004 Security Update will compile on Jaguar

    2004-07-09  Chris Blumenberg  <cblu@apple.com>

        Allowed my change for 3715785 to compile on Jaguar.

        Reviewed by kocienda.

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge domain]): new, allows access to the domain without using the DOM API which doesn't exist on Jaguar

=== WebCore-85.6 ===

2004-01-19  Maciej Stachowiak  <mjs@apple.com>

	Merged security fix from HEAD. Clone for this branch is:

	<rdar://problem/3533737>: Safari allows upload of arbitrary local files w/o user's knowledge or permission (SUJagBullet)

    2004-01-19  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John, Ken, Dave.

	<rdar://problem/3533319>: Safari allows upload of arbitrary local files w/o user's knowledge or permission
        
	* khtml/html/html_formimpl.cpp:
        (HTMLInputElementImpl::value): Don't fall back to the value
	attribute for file inputs, since that way malicious HTML could
	force the user to upload files unexpectedly.

=== Safari-85.5 ===

2003-07-14  Darin Adler  <darin@apple.com>

        Rolled in change from main trunk.

    2003-07-14  Dave Hyatt  <hyatt@apple.com>

	Fix for 3294626, no scrollbar on ESPN.  Fix lowestPosition to
	always crawl into all children.
	
        Reviewed by darin

        * khtml/rendering/render_flow.cpp:
        (RenderFlow::lowestPosition):
        (RenderFlow::rightmostPosition):

2003-07-14  Darin Adler  <darin@apple.com>

        Rolled in change from main trunk.

    2003-07-08  Dave Hyatt  <hyatt@apple.com>

	Make sure that the contents width and height of the view are
	used as the root height and width when a view exists.  This
	ensures that the root element background properly tiles over 
	the entire height of the document.  (This used to be ensured