@@ -1,3 +1,12 @@
+2004-07-22  Darin Adler  <darin@apple.com>
+
+        Reviewed by Chris.
+
+        - change to get things compiling
+
+        * kwq/WebCoreBridge.mm: (-[WebCoreBridge domain]):
+        Add cast to HTMLDocumentImpl so call to domain() function compiles.
+
 === WebCore-85.6.1 ===
 
 2004-07-09  Vicki Murley  <vicki@apple.com>
